Trying to find a OS independent way of constructing the artifact URL. This version works on Windows